[package]
name = "backup_service"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.0"
bytes = "1.1"
google-cloud-storage = "0.13.1"
google-cloud-auth = "0.2"
secp256k1 = { version = "0.22", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.86"
google-cloud-default = "0.1"

