[package]
name = "cloud-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
web3 = {version = "0.16.0", features = ["rand"] }
tokio = "1.9.0"
secp256k1 = {version = "0.20.3", features = ["rand"] }
tiny-keccak = "2.0.2"
anyhow = "1.0.42"
fltk = { version = "^1.1", git = "https://github.com/fltk-rs/fltk-rs" }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.204"
serde_json = "1.0.120"
hex = "0.4.3"
log = "0.4.22"
env_logger = "0.11.3"
bytes = "1.6.1"
google-cloud-storage = "0.20.0"
